--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:UzHT7ZJxExtPET787iA9teCmV1Or77nK9oS3vtrIG5s=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://www.afuafra.xyz/
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=antharis
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=afu3123
+DB_PASSWORD=123456789
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
