--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "@danielfarrell/bootstrap-combobox": "^1.1.8",
+        "bootstrap-select": "^1.13.18",
+        "select2-bootstrap-theme": "^0.1.0-beta.10"
     }
 }
